--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^25.1.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "dotenv": "^16.3.1"
   }
 }
